force-app/main/default/objects/Project_Task__c/fields/Completion__c.field-meta.xml
<CustomField>
    <fullName>Completion__c</fullName>
    <label>Completion</label>
    <type>Date</type>
</CustomField>