force-app/main/default/objects/Project_Task__c/fields/Previous_Task__c.field-meta.xml
<CustomField>
    <fullName>Previous_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Task</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>