force-app/main/default/objects/Project_Task__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Task</fullName>
            </value>
            <value>
                <fullName>Planning Phase</fullName>
            </value>
            <value>
                <fullName>Construction Work</fullName>
            </value>
            <value>
                <fullName>Completion Step</fullName>
            </value>
            <value>
                <fullName>Contract End</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>