force-app/main/default/objects/Project_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Previous_Task__c</columns>
    <columns>Completed__c</columns>
    <columns>Completion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Lunch Management</value>
    </filters>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Lunch Management</value>
    </filters>
    <label>All</label>
</ListView>